# websecscan

./: .gitignore  LICENSE  README.md  pyproject.toml
Features/: features_api.py  features_auth.py  features_common.py  features_config.py  features_export.py  features_metrics.py  features_privacy.py  features_severity.py  features_subdomains.py  features_threat.py  features_threatintel.py  features_vuln.py
websecscanner/: WebSec_scanner.py
