[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websecscanner"
version = "0.1.0"
description = "Simple Web Security Scanner CLI tool"
authors = [
    { name = "pqqou" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pyyaml"
]

[project.scripts]
websecscan = "websecscanner.WebSec_scanner:main"

[tool.setuptools]
packages = ["websecscanner", "Features"]
